--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,14 +17,16 @@
       .navbar-inner
         .container
           .nav-collapse
-            %ul.nav
+            %ul.nav.pull-left
               %li= link_to 'How It Works', welcome_index_path
               %li= link_to 'Browse Projects', welcome_index_path
               %li= link_to 'Browse Filmmakers', welcome_index_path
-     
-            %div.btn.btn-success= link_to 'Login', welcome_index_path,:method =>:get
-            %div.btn.btn-success= link_to 'Sign Up', welcome_index_path, :method =>:get
+            %div.pull-right#mybtngroup
+              %div.btn.btn-success#login= link_to 'Login', welcome_index_path,:method =>:get
+              %div.btn.btn-success#login= link_to 'Sign Up', welcome_index_path, :method =>:get
               
+    %div.row
+      %div.banner
 
     #main
       = yield
