--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,18 +11,30 @@
  *= require_self
  *= require_tree .
  */
+*=require twitter/bootstrap
 
 body {
   background-color:#f7f7f9;
 }
-
 #AMASS {
   font-size: 400%;
-  padding-top:25px;
-  padding-bottom:25px;
   font-weight:bold;
-  text-align:right;
   color:#8aba00;
+  padding-left:7%;
+  padding-bottom:0;
+}
+
+
+
+.button_to {
+  margin-top: 10px;
+}
+
+#description{
+  text-align:left;
+  padding-top:2.3%;
+  color:#8aba00;
+  font-size: 170%;
 
 }
 
@@ -30,33 +42,23 @@ body {
 position:relative;
 }
 
-
-#description{
-  position:absolute;
-  bottom:14px;
-  left: 470px;
-  font-size:20px;
-  color:#8aba00;
+#navbar-items {
+  margin-left:5%
 }
-
-.button_to {
-  margin-top: 10px;
-}
-
-
 
 #login {
   position:relative;
   display:inline-block;
-  margin-top:18px;
+  margin-top:7%;
 
 }
 
+#login-div {
+  margin-right:1%;
+}
+
 .navbar li {
-  padding: 10px;
-  padding-left:30px;
-  font-size:25px;
-  margin-top:5px;
+  font-size:150%;
 }
 
 
@@ -107,16 +109,20 @@ position:relative;
 }
 
 #feat {
-  font-size: 40px;
+  padding-left:7%;
   color: #8aba00;
   font-weight:bold;
-  margin-top:25px;
+  font-size:300%;
+  padding-top:1%;
+  padding-bottom:1%;
 }
 
-.thumbnail {
-  margin-top: 30px;
-  float: none;
+#project-div {
+  padding-left:3%;
+  padding-right:3%;
+  margin-bottom:5%;
 } 
+
 
 #Learn {
   margin-top: 75px;
