messed with the header

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
   %body
     
     %div.row#top-div
-      %div.col-md-5#AMASS AMASS MEDIA
+      %div.col-md-6.col-sm-7#AMASS AMASS MEDIA
       %div{:class => "col-md-6", :id => "description"}  connecting nonprofits with talented filmmakers.
         
       
