sign up page, user table, etc

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
       .navbar-header.pull-right#login-div
         %ul.nav.navbar-nav
           %div.btn.btn-success#login= link_to 'Login', welcome_index_path,:method =>:get
-          %div.btn.btn-success#login= link_to 'Sign Up', welcome_index_path, :method =>:get
+          %div.btn.btn-success#login= link_to 'Sign Up', new_user_path, :method =>:get
          
               
     #main
