--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,28 +1,34 @@
-%h1= t(:register)
+%h1 Sign Up
 
-= form_for @user do |f|
+= form_tag users_path(@user) do
   - if @user.errors.any?
     .error-messages
       %ul
         - for message in @user.errors.full_messages
           %li= message
   %div
-    = f.label :name
-    = f.text_field :name
+    = label :user, :name, 'Name'
   %div
-    = f.label :username
-    = f.text_field :username
+    = text_field :user, 'name'
   %div
-    = f.label :email
-    = f.email_field :email
+    = label :user, :username, 'Username'
   %div
-    = f.label :password
-    = f.password_field :password
+    = text_field :user, 'username'
   %div
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
+    = label :user, :email, 'Email'
   %div
-    = f.label :are_you_a_filmmaker_or_a_nonprofit?
-    = f.select :usertype, options_for_select([["Select One", ""], "Filmmaker", "Nonprofit"])
+    = text_field :user, 'email'
   %div
-    = f.submit 
+    = label :user, :password, 'Password'
+  %div
+    = password_field :user, 'password'
+  %div
+    = label :user, :password_confirmation, 'Password Confirmation'
+  %div
+    = password_field :user, 'password_confirmation'	
+  %div
+    = label :user, :usertype, 'Are You a Filmmaker or Nonprofit?'
+  %div
+    = select :user, 'usertype', ['Filmmaker','Nonprofit']
+  %div
+    = submit_tag 'Sign Up'
