fix features, pass most cucumber tests

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -17,7 +17,7 @@
   %div
     = label :user, :email, 'Email'
   %div
-    = text_field :user, 'email'
+    = email_field :user, 'email'
   %div
     = label :user, :password, 'Password'
   %div
