--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
       .navbar-header#navbar-items
         %ul.nav.navbar-nav
           %li= link_to 'How It Works', welcome_index_path
-          %li= link_to 'Browse Projects', welcome_index_path
+          %li= link_to 'Browse Projects', projects_path
           %li= link_to 'Browse Filmmakers', welcome_index_path
       .navbar-header.pull-right#login-div
         %ul.nav.navbar-nav
