fixed div for featured projects title

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -8,7 +8,7 @@
   %div.span5.offset1
 
 %div.row
-  %div.span5.offset1#feat Featured Projects
+  %div.col-md-6.col-sm-6#feat Featured Projects
 
 %div.row#project-div
   %div.col-sm-4.col-md-3
