--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,36 +1,39 @@
-%h1.col-lg-offset-2 Sign Up
-.col-lg-offset-2
-  = form_tag users_path(@user) do
-    - if @user.errors.any?
-      .error-messages
-        %ul
-          - for message in @user.errors.full_messages
-            %li= message
-    %div
-      = label :user, :name, 'Name'
-    %div
-      = text_field :user, 'name'
-    %div
-      = label :user, :username, 'Username'
-    %div
-      = text_field :user, 'username'
-    %div
-      = label :user, :email, 'Email'
-    %div
-      = email_field :user, 'email'
-    %div
-      = label :user, :password, 'Password'
-    %div
-      = password_field :user, 'password'
-    %div
-      = label :user, :password_confirmation, 'Password Confirmation'
-    %div
-      = password_field :user, 'password_confirmation'	
-    %div
-      = label :user, :usertype, 'Are You a Filmmaker or Nonprofit?'
-    %div
-      = select :user, 'usertype', ['Filmmaker','Nonprofit']
-    %p
-    %div
-      = submit_tag 'Sign Up', class: "btn btn-large btn-success"
+.container
+  .row
+    .col-md-4.col-md-offset-4
+      .panel.panel-default
+        .panel-heading
+          %h3.panel-title Please Sign Up
+        .panel-body
+          %form#new_user.new_user{"accept-charset" => "UTF-8", action: "/users", method: "post"}
+            = form_tag users_path(@user) do
+              - if @user.errors.any?
+                .error-messages
+                  %ul
+                    - for message in @user.errors.full_messages
+                      %li= message
+              %fieldset
+                .form-group
+                  %input#user_name.form-control{name: "user[name]", placeholder: "Name", type: "text"}/
+              .form-group
+                %input#user_username.form-control{name: "user[username]", placeholder: "Username", type: "text"}/
+              .form-group
+                %input#user_email.form-control{name: "user[email]", placeholder: "Email", type: "text"}/   
+              .form-group
+                %input#user_password.form-control{name: "user[password]", placeholder: "Password", type: "password", value: ""}/
+              .form-group
+                %input#user_password.form-control{name: "user[password_confirmation]", placeholder: "Password Confirmation", type: "password", value: ""}/
+              %p
+                Are you a Filmmaker or Nonprofit?
+              .checkbox
+                %label
+                  %input{name: "user[usertype]", type: "checkbox", value: "filmmaker"}/
+                  Filmmaker
+              .checkbox
+                %label
+                  %input{name: "user[usertype]", type: "checkbox", value: "nonprofit"}/
+                  Nonprofit
+
+              %input.btn.btn-lg.btn-success.btn-block{type: "submit", value: "Sign Up"}/
+
 
