fixed nav bar and thumbnails

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,15 +16,12 @@
 body {
   background-color:#f7f7f9;
 }
-#AMASS {
-  font-size: 400%;
+
+#logo {
+  font-size: 200%;
   font-weight:bold;
-  color:#8aba00;
-  padding-left:7%;
-  padding-bottom:0;
+  # padding-right:5%;
 }
-
-
 
 .button_to {
   margin-top: 10px;
@@ -38,12 +35,14 @@ body {
 
 }
 
-#top-div {
-position:relative;
+#navbar-items {
+  margin-left:10%;
 }
 
-#navbar-items {
-  margin-left:5%
+#nav-div {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin-bottom: 0;
 }
 
 #login {
@@ -54,7 +53,8 @@ position:relative;
 }
 
 #login-div {
-  margin-right:1%;
+  margin-right:11%;
+  # width: 20%;
 }
 
 .navbar li {
