--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Listing projects
 
-%table
+%table{:border => "4", :width =>"90%", :align => "center"}
   %tr
     %th Name
     %th Organization
@@ -10,12 +10,9 @@
     %th Deadline
     %th Status
     %th Budget
-    %th
-    %th
-    %th
 
   - @projects.each do |project|
-    %tr
+    %tr{:align => "center", :valign => "center"}
       %td= link_to "#{project.name}", project_path(project.id)
       %td= project.organization
       %td= project.blurb
