--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,7 +11,20 @@
                 .alert.alert-danger
                   %ul
                     - for message in @user.errors.full_messages
-                      %li= message
+                      -if message == "Name can't be blank"
+                        %li Name is required
+                      -if message == "Username can't be blank"
+                        %li Username is required
+                      -if message == "Email can't be blank"
+                        %li Email is required
+                      -if message == "Usertype can't be blank"
+                        %li Please indicate User Type
+                      -if message == "Password digest can't be blank"
+                        %li Password is required
+                      -if message == "Password doesn't match confirmation"
+                        %li Password doesn't match confirmation
+                      
+                      
               %fieldset
               .form-group
                 %label Name
