--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -4,14 +4,14 @@
 
   - @projects.each do |project|
     %div.col-sm-4.col-md-3.col-lg-3#project
-      %div.thumbnail
-        =image_tag "balloon.jpg"
+      %div.thumbnail=link_to project_path(project.id)
+        =image_tag "/#{project.id}/thumb.jpg"
         %div.caption
           %h2= project.category
-          %h3= project.organization
-          %h4= link_to  project.name, project_path(project.id)
+          %h3{align: "center"}= project.name 
+          %h4= project.organization
           %p= project.description
-          %p= "Budget: #{project.budget}"
+          %p= "Budget: $#{project.budget}"
 
 %br
 
