Finished sign-out feature

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -25,6 +25,8 @@
                         %li= message
                       -elsif message == "Password doesn't match confirmation"
                         %li Password doesn't match confirmation
+                      -else 
+                        %li= message
                    
                     
                       
