--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -5,10 +5,10 @@
   - @projects.each do |project|
     %div.col-sm-4.col-md-3.col-lg-3#project
       %div.thumbnail=link_to project_path(project.id)
-        =image_tag "/#{project.id}/thumb.jpg"
+        = image_tag "projects/#{project.id}/thumb.jpg"
         %div.caption
           %h2= project.category
-          %h3{align: "center"}= project.name 
+          %h3{align: "center"}= link_to project.name, project_path(project.id)
           %h4= project.organization
           %p= project.description
           %p= "Budget: $#{project.budget}"
