--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -5,7 +5,10 @@
   - @projects.each do |project|
     %div.col-sm-4.col-md-3.col-lg-3#project
       %div.thumbnail
-        = image_tag "projects/#{project.id}/thumb.jpg"
+        - if thumbnail_exist?(project.id)
+		  = image_tag "projects/#{project.id}/thumb.jpg"
+		- else
+		  = image_tag "balloon.jpg"
         %div.caption
           %h2= project.category
           %h3{align: "center"}= link_to project.name, project_path(project.id)
