--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -5,7 +5,7 @@
   - @projects.each do |project|
     %div.col-sm-4.col-md-3.col-lg-3#project
       %div.thumbnail
-        %a{href= "#{project_path(project.id)}"}
+        %a{href: "#{project_path(project.id)}"}
           - if thumbnail_exist?(project.id)
             %img{src:"assets/projects/#{project.id}/thumb.jpg", height:"256", width:"341"}
           - else
