--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -5,10 +5,12 @@
   - @projects.each do |project|
     %div.col-sm-4.col-md-3.col-lg-3#project
       %div.thumbnail
-        - if thumbnail_exist?(project.id)
-          = image_tag "projects/#{project.id}/thumb.jpg"
-        - else
-          = image_tag "balloon.jpg"
+        %a{href: "#{project_path(project.id)}"}
+          - if thumbnail_exist?(project.id)
+            %img{src:"assets/projects/#{project.id}/thumb.jpg", height:"256", width:"341"}
+          - else
+            %img{src:"assets/balloon.jpg",height:"256", width:"341"}
+        
         %div.caption
           %h2= project.category
           %h3{align: "center"}= link_to project.name, project_path(project.id)
