add location to db

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -4,6 +4,12 @@
   %b Name:
   = @project.name
 %p
+  %b Category:
+  = @project.category
+%p
+  %b Location:
+  = @project.location
+%p
   %b Organization:
   = @project.organization
 %p
