--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,13 +13,13 @@
 
       .navbar-header#navbar-items
         %ul.nav.navbar-nav
-          %li#logo= link_to 'AMASS Media', welcome_index_path
+          %li#logo= link_to 'AMASS Media', root_path
           %li.nav-items= link_to 'How It Works', root_path
           %li.nav-items= link_to 'Browse Projects', projects_path
           %li.nav-items= link_to 'Browse Filmmakers', root_path
       .navbar-header.pull-right#login-div
         %ul.nav.navbar-nav.navbar-right{role: "navigation"}
-          - if signed_in?
+          - if user_signed_in?
             %li.dropdown.clearfix
               %a.dropdown-toggle#welcome-user{"data-toggle" => "dropdown", href: "#", role: "button"}
                 Welcome, #{current_user.name}
@@ -31,10 +31,10 @@
                   %a.drop-items{href: "#", role: "menuitem", tabindex: "-1"}     Settings
                 %li.divider{role: "presentation"}
                 %li{role: "presentation"}
-                  %a.drop-items{href: "/signout", role: "menuitem", tabindex: "-1"} Logout
+                  %a.drop-items{role: "menuitem", tabindex: "-1"}= link_to 'Logout', destroy_user_session_path, :method => 'delete'
           - else
-            %div.btn.btn-success#login= link_to 'Login', signin_path,:method =>:get
-            %div.btn.btn-success#login= link_to 'Sign Up', signup_path, :method =>:get
+            %div.btn.btn-success#login= link_to 'Login', new_user_session_path,:method =>:get
+            %div.btn.btn-success#login= link_to 'Sign Up', new_user_registration_path, :method =>:get
            
          
               
