--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,17 +1,62 @@
-%h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email, :autofocus => true
-  %div
-    = f.label :password
-    %br/
-    = f.password_field :password
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %div= f.submit "Sign up"
-= render "devise/shared/links"
+.container
+  .row
+    .col-md-4.col-md-offset-4
+      .panel.panel-default
+        .panel-heading
+          %h3.panel-title Please Sign Up
+        .panel-body
+          %form#new_user.new_user{"accept-charset" => "UTF-8", action: "/users", method: "post"}
+            = form_tag users_path(@user) do
+              - if @user.errors.any?
+                .alert.alert-danger
+                  %ul
+                    - for message in @user.errors.full_messages
+                      -if message == "Name can't be blank"
+                        %li Name is required
+                      -elsif message == "Username can't be blank"
+                        %li Username is required
+                      -elsif message == "Email can't be blank"
+                        %li Email is required
+                      -elsif message == "Usertype can't be blank"
+                        %li Please indicate User Type
+                      -elsif message == "Password digest can't be blank"
+                        %li Password is required
+                      -elsif message == "Email is invalid"
+                        %li= message
+                      -elsif message == "Password doesn't match confirmation"
+                        %li Password doesn't match confirmation
+                      -else 
+                        %li= message
+                   
+                    
+                      
+                      
+              %fieldset
+              .form-group
+                %label Name
+                %input#user_name.form-control{name: "user[name]", placeholder: "Name", type: "text"}/
+              .form-group
+                %label Username
+                %input#user_username.form-control{name: "user[username]", placeholder: "Username", type: "text"}/
+              .form-group
+                %label Email
+                %input#user_email.form-control{name: "user[email]", placeholder: "Email", type: "text"}/   
+              .form-group
+                %label Password
+                %input#user_password.form-control{name: "user[password]", placeholder: "Password", type: "password", value: ""}/
+              .form-group
+                %label Password Confirmation
+                %input#user_password.form-control{name: "user[password_confirmation]", placeholder: "Password Confirmation", type: "password", value: ""}/
+              %label Are You a Filmmaker or Nonprofit?
+              .checkbox
+                %label
+                  %input{name: "user[usertype]", type: "checkbox", value: "filmmaker"}/
+                  Filmmaker
+              .checkbox
+                %label
+                  %input{name: "user[usertype]", type: "checkbox", value: "nonprofit"}/
+                  Nonprofit
+
+              %input.btn.btn-lg.btn-success.btn-block{type: "submit", value: "Sign Up"}/
+
+
