--- a/app/assets/stylesheets/browseprojects.css
+++ b/app/assets/stylesheets/browseprojects.css
@@ -2,12 +2,72 @@
   padding: 1%;
 }
 
-#proj-container {
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
 #listing-title {
   margin-left:11%;
   font-size: 180%
+}
+
+#wrapper {
+  padding-left: 200px;
+}
+
+#sidebar-wrapper {
+  padding-left: 1%;
+  margin-left: -200px;
+  left: 200px;
+  width: 200px;
+  background: #ffffff;
+  position: absolute;
+  height: 100%;
+  overflow-y: auto;
+}
+
+#page-content-wrapper {
+  width: 100%;
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar-nav li {
+  line-height: 40px;
+  text-indent: 20px;
+}
+
+.sidebar-nav li a {
+  color: #999999;
+  display: block;
+  text-decoration: none;
+}
+
+.sidebar-nav li a:hover {
+  color: #fff;
+  background: rgba(255,255,255,0.2);
+  text-decoration: none;
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  line-height: 60px;
+  font-size: 18px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+  color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
 }
