--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,39 +5,56 @@
         .panel-heading
           %h3.panel-title Please Sign Up
         .panel-body
-          %form#new_user.new_user{"accept-charset" => "UTF-8", action: "/users", method: "post"}
-            = form_tag users_path(@user) do
-              .alert.alert-danger.alert-dismissable
-                %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
-                = devise_error_messages!
+          = form_for(resource, :as => resource_name, :url => new_user_registration_path) do |f|
+            - if resource.errors.any?
+              .alert.alert-danger
+                %ul
+                  - resource.errors.full_messages.each do |message|
+                    -if message == "Name can't be blank"
+                      %li Name is required
+                    -elsif message == "Username can't be blank"
+                      %li Username is required
+                    -elsif message == "Email can't be blank"
+                      %li Email is required
+                    -elsif message == "Usertype can't be blank"
+                      %li Please indicate User Type
+                    -elsif message == "Password can't be blank"
+                      %li Password is required
+                    -elsif message == "Email is invalid"
+                      %li= message
+                    -elsif message == "Password doesn't match confirmation"
+                      %li Password doesn't match confirmation
+                    -else 
+                      %li= message
                    
-              %fieldset
-              .form-group
-                %label Name
-                %input#user_name.form-control{name: "user[name]", placeholder: "Name", type: "text"}/
-              .form-group
-                %label Username
-                %input#user_username.form-control{name: "user[username]", placeholder: "Username", type: "text"}/
-              .form-group
-                %label Email
-                %input#user_email.form-control{name: "user[email]", placeholder: "Email", type: "text"}/   
-              .form-group
-                %label Password
-                %input#user_password.form-control{name: "user[password]", placeholder: "Password", type: "password", value: ""}/
-              .form-group
-                %label Password Confirmation
-                %input#user_password.form-control{name: "user[password_confirmation]", placeholder: "Password Confirmation", type: "password", value: ""}/
-              %label Are You a Filmmaker or Nonprofit?
-              .checkbox
-                %label
-                  %input{name: "user[usertype]", type: "checkbox", value: "filmmaker"}/
-                  Filmmaker
-              .checkbox
-                %label
-                  %input{name: "user[usertype]", type: "checkbox", value: "nonprofit"}/
-                  Nonprofit
+                    
+                      
+                      
+            %fieldset
+            .form-group
+              %label Name
+              %input#user_name.form-control{name: "user[name]", placeholder: "Name", type: "text"}/
+            .form-group
+              %label Username
+              %input#user_username.form-control{name: "user[username]", placeholder: "Username", type: "text"}/
+            .form-group
+              %label Email
+              %input#user_email.form-control{name: "user[email]", placeholder: "Email", type: "text"}/   
+            .form-group
+              %label Password
+              %input#user_password.form-control{name: "user[password]", placeholder: "Password", type: "password", value: ""}/
+            .form-group
+              %label Password Confirmation
+              %input#user_password.form-control{name: "user[password_confirmation]", placeholder: "Password Confirmation", type: "password", value: ""}/
+            %label Are You a Filmmaker or Nonprofit?
+            .checkbox
+              %label
+                %input{name: "user[usertype]", type: "checkbox", value: "filmmaker"}/
+                Filmmaker
+            .checkbox
+              %label
+                %input{name: "user[usertype]", type: "checkbox", value: "nonprofit"}/
+                Nonprofit
 
-              %input.btn.btn-lg.btn-success.btn-block{type: "submit", value: "Sign Up"}/
-              = render "devise/shared/links"
-
+            %input.btn.btn-lg.btn-success.btn-block{type: "submit", value: "Create an account"}/
 
