debugging image issues

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,10 @@
     = stylesheet_link_tag 'application'
     = stylesheet_link_tag 'bootstrap'
     = stylesheet_link_tag 'browseprojects'
+    = stylesheet_link_tag 'viewproject'
     = csrf_meta_tags
 
-  %body
+  %body#blah
     %nav.navbar.navbar-inverse#nav-div
 
       .navbar-header#navbar-items
